# deepmarket

./: .gitignore  COMPOSABILITY_PLAN.md  HOW_TRADING_WORKS.html  README.md
.github/workflows/: bot-ci.yml  codeql.yml  frontend-ci.yml  indexer-ci.yml  move-ci.yml  security.yml
bot/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
bot/src/: agent-cap.ts  agent.ts  alerts.ts  chat-agent.ts  config.ts  dryrun-agent.ts  fifa-strategy.ts  fifa.ts  index.ts  keeper.ts  memory.ts  memwal.ts  menus.ts  predict.ts  quote.ts  spot.ts  store.ts  strategy.ts  sui.ts  trade-panel.ts  trader.ts  user-wallet.ts  watchers.ts
deepmarket/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
deepmarket/src/: App.tsx  index.css  main.tsx
deepmarket_contract/: Move.toml  Published.toml  README.md
deepmarket_contract/sources/: agent_cap.move  deepmarket_contract.move  market_factory.move  no_token.move  outcome_market.move  yes_token.move
deepmarket_contract/tests/: deepmarket_contract_tests.move  outcome_market_tests.move
docs/: .gitignore  README.md  package-lock.json  package.json  theme.config.tsx
docs/pages/: _meta.ts  architecture.mdx  getting-started.mdx  index.mdx
docs/styles/: global.css
indexer/: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
indexer/src/: api.rs  builder.rs  db.rs  indexer.rs  main.rs
test_pkg/: Move.toml
test_pkg/sources/: test_module.move
video/: package-lock.json  package.json
video/scripts/: capture.mjs
(+88 files in other folders)
