[package]
name = "indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
axum = "0.7.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redis = { version = "0.25", features = ["tokio-comp"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
sui-sdk = { git = "https://github.com/MystenLabs/sui.git", subdir = "crates/sui-sdk", branch = "testnet" }
futures = "0.3"
anyhow = "1.0"
dotenvy = "0.15.7"
tower-http = { version = "0.6.8", features = ["cors"] }
reqwest = { version = "0.12", features = ["json"] }
